# Media-Scout

./: Cargo.toml  backend.Dockerfile
content-recommender-frontend/: frontend.Dockerfile  index.html  nginx.conf  package-lock.json  package.json
content-recommender-frontend/src/: App.jsx  config.js
content-recommender-frontend/src/components/: ContentRecommender.jsx
content-recommender-frontend/src/components/ui/: alert.jsx  badge.jsx  button.jsx  input.jsx  tabs.jsx
content-recommender-frontend/src/styles/: globals.css
src/: main.rs
