[package]
name = "Media-Scout"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
azure_storage_blob = "0.17"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
deflate = "1.0"